@@ -1,4 +1,4 @@
 # DO NOT MERGE INTO TRUNK
-RELEASE=.0b5
+RELEASE=.0b6
 BRANCH=1.1
 TRUNK=
