@@ -5,7 +5,7 @@
 
   <Description about="urn:mozilla:install-manifest">
     <em:id>firebug@software.joehewitt.com</em:id>
-    <em:version>1.1.0b5</em:version>
+    <em:version>1.1.0b6</em:version>
     <em:type>2</em:type>
 
     <!-- Firefox -->
